--- a/styles.css
+++ b/styles.css
@@ -7170,6 +7170,10 @@ h1 {
   background-size: contain;
 }
 
+.server-url input:invalid, .server-url input:focus:invalid {
+  box-shadow: 0 0 5px 1px red;
+}
+
 .session-info-bar {
   position: fixed;
   top: 0;
@@ -7626,4 +7630,5 @@ form button[type="submit"].btn-primary {
   display: block;
   overflow: auto;
   max-height: 4em;
+  white-space: pre-line;
 }
